FIX: fix videos page on mobile

--- a/css/videolist.css
+++ b/css/videolist.css
@@ -82,3 +82,15 @@ h2 {
 .video-section-info h2 a:hover, .video-section-info a:hover {
     text-decoration: underline;
 }
+
+@media screen and (max-width: 767px) {
+    .live-video-container {
+        flex-direction: column;
+    }
+
+    .team-videos-container {
+        margin-left: 0;
+        margin-top: 5px;
+        flex-direction: column;
+    }
+}
